<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/registerString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/krona_one"
        android:text="@string/registerString"
        android:textColor="@color/orange"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/email_password_edit_text"
        android:hint="@string/firstname"
        android:outlineAmbientShadowColor="@color/grey"
        android:outlineSpotShadowColor="@color/grey"
        android:paddingStart="13dp"
        android:shadowColor="@color/grey"
        android:textColor="@color/grey"
        android:textColorHighlight="@color/grey"
        android:textColorHint="@color/grey"
        android:textColorLink="@color/grey"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/secondname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/email_password_edit_text"
        android:hint="@string/secondname"
        android:outlineAmbientShadowColor="@color/grey"
        android:outlineSpotShadowColor="@color/grey"
        android:paddingStart="13dp"
        android:shadowColor="@color/grey"
        android:textColor="@color/grey"
        android:textColorHighlight="@color/grey"
        android:textColorHint="@color/grey"
        android:textColorLink="@color/grey"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/email_password_edit_text"
        android:hint="@string/nextemail"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="@color/grey"
        android:outlineSpotShadowColor="@color/grey"
        android:paddingStart="13dp"
        android:shadowColor="@color/grey"
        android:textColor="@color/grey"
        android:textColorHighlight="@color/grey"
        android:textColorHint="@color/grey"
        android:textColorLink="@color/grey"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/firstPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/email_password_edit_text"
        android:hint="@string/nextfirstpassword"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/grey"
        android:outlineSpotShadowColor="@color/grey"
        android:paddingStart="13dp"
        android:shadowColor="@color/grey"
        android:textColor="@color/grey"
        android:textColorHighlight="@color/grey"
        android:textColorHint="@color/grey"
        android:textColorLink="@color/grey"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <EditText
        android:id="@+id/secondPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/email_password_edit_text"
        android:ems="10"
        android:hint="@string/nextsecondpassword"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/grey"
        android:outlineSpotShadowColor="@color/grey"
        android:paddingStart="13dp"
        android:shadowColor="@color/grey"
        android:textColor="@color/grey"
        android:textColorHighlight="@color/grey"
        android:textColorHint="@color/grey"
        android:textColorLink="@color/grey"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732">


        <RadioButton
            android:id="@+id/buyerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buyer"
            android:textColor="@color/grey"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/salesmanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salesman"
            android:textColor="@color/grey"
            android:textSize="20dp" />
    </RadioGroup>

    <Button
        android:id="@+id/singUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/krona_one"
        android:text="@string/regStrOnBtn"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>